--- a/ffi/rust/crypto/Cargo.toml
+++ b/ffi/rust/crypto/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bandersnatch_vrfs = { git = "https://github.com/w3f/ring-vrf", version = "0.0.4" }
 
 [lib]
 crate-type = ["staticlib"]
