refactor: move tests and update build configuration for better organization
Zig does not allow for parent imports, and I want the zls to index the
test files as well. Looking for a reference in the TigerBeetle project,
I decided to move the tests inside the src directory.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tests/test-vectors"]
-	path = tests/vectors/jam
+	path = src/tests/vectors/jam
 	url = https://github.com/w3f/jamtestvectors.git
