--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tests/test-vectors"]
-	path = src/tests/vectors/jam
+	path = src/tests/vectors/safrole
 	url = https://github.com/w3f/jamtestvectors.git
