--- a/ffi/rust/crypto/Cargo.toml
+++ b/ffi/rust/crypto/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 [dependencies]
 ark-ec-vrfs ={ git = "https://github.com/davxy/ark-ec-vrfs", rev = "376eb16", features = ["bandersnatch", "ring", "parallel"] }
 hex = "0.4.3"
+lru = "0.12.4"
 
 [lib]
 crate-type = ["staticlib"]
