refactor: refactoring ffi ring vrf code
The `Cargo.toml` file has been updated to include the `thiserror`
crate. The changes also include the addition of error handling and new
functions for commitment verification and ring signature generation and
verification.

--- a/ffi/rust/crypto/Cargo.toml
+++ b/ffi/rust/crypto/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 ark-ec-vrfs ={ git = "https://github.com/davxy/ark-ec-vrfs", rev = "376eb16", features = ["bandersnatch", "ring", "parallel"] }
 hex = "0.4.3"
 lru = "0.12.4"
+thiserror = "1.0.64"
 
 [lib]
 crate-type = ["staticlib"]
