feat: add pvm test vectors
added submodule for pvm test vectors

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/tests/vectors/codec"]
 	path = src/tests/vectors/codec
 	url = https://github.com/w3f/jamtestvectors.git
+[submodule "src/tests/vectors/pvm/pvm"]
+	path = src/tests/vectors/pvm/pvm
+	url = https://github.com/w3f/jamtestvectors.git
