feat: add merkle tree implementation
Added a new merkle tree implementation in `src/merkle.zig`, along with
test vectors in `src/tests/vectors/trie.zig` and a test suite in
`src/merkle_test.zig`. The implementation includes a `M_sigma` function
for computing the merkle root of a list of key-value pairs.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/tests/vectors/pvm/pvm"]
 	path = src/tests/vectors/pvm/pvm
 	url = https://github.com/w3f/jamtestvectors.git
+[submodule "src/tests/vectors/trie"]
+	path = src/tests/vectors/trie
+	url = https://github.com/w3f/jamtestvectors.git
