feat: added history testvectors

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "src/tests/vectors/judgements"]
 	path = src/tests/vectors/disputes
 	url = https://github.com/w3f/jamtestvectors.git
+[submodule "src/tests/vectors/history"]
+	path = src/tests/vectors/history
+	url = https://github.com/w3f/jamtestvectors.git
