--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,8 @@ jobs:
           - aarch64-unknown-linux-gnu
           - aarch64-unknown-linux-musl
           # Darwin/macOS targets
-          - x86_64-apple-darwin
-          - aarch64-apple-darwin
+          - x86_64-macos-darwin
+          - aarch64-macos-darwin
         include:
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-24.04
@@ -29,10 +29,10 @@ jobs:
           - target: aarch64-unknown-linux-musl
             os: ubuntu-24.04
             can_test: true
-          - target: x86_64-macos-darwin
+          - target: x86_64-apple-darwin
             os: macos-latest
             can_test: true
-          - target: aarch64-macos-darwin
+          - target: aarch64-apple-darwin
             os: macos-latest
             can_test: false  
 
