--- a/.github/workflows/cross-platform-build-and-test.yml
+++ b/.github/workflows/cross-platform-build-and-test.yml
@@ -13,24 +13,24 @@ jobs:
       matrix:
         target:
           # Linux targets
-          - x86_64-unknown-linux-gnu
-          - x86_64-unknown-linux-musl
-          - aarch64-unknown-linux-gnu
-          - aarch64-unknown-linux-musl
+          - x86_64-linux-gnu
+          - x86_64-linux-musl
+          - aarch64-linux-gnu
+          - aarch64-linux-musl
           # Darwin/macOS targets
           - x86_64-macos
           - aarch64-macos
         include:
-          - target: x86_64-unknown-linux-gnu
+          - target: x86_64-linux-gnu
             os: ubuntu-24.04
             can_test: true
-          - target: x86_64-unknown-linux-musl
+          - target: x86_64-linux-musl
             os: ubuntu-24.04
             can_test: true
-          - target: aarch64-unknown-linux-gnu
+          - target: aarch64-linux-gnu
             os: ubuntu-24.04
             can_test: true
-          - target: aarch64-unknown-linux-musl
+          - target: aarch64-linux-musl
             os: ubuntu-24.04
             can_test: true
           - target: x86_64-macos
@@ -63,26 +63,25 @@ jobs:
       - name: Test Debug ${{ matrix.target }}
         if: ${{ matrix.can_test }}
         run: |
-          nix run .#test -- --target ${{ matrix.target }} --progress
+          nix run .#test -- -Dtarget=${{ matrix.target }} -- --progress
 
       - name: Test ReleaseFast ${{ matrix.target }}
         if: ${{ matrix.can_test }}
         run: |
-          nix run .#test-release-fast -- --target ${{ matrix.target }} --progress
+          nix run .#test -- -Dtarget=${{ matrix.target }} -Doptimize=ReleaseFast -- --progress
 
       - name: TestFFI Debug for ${{ matrix.target }}
         if: ${{ matrix.can_test }}
         run: |
-          nix run .#test-ffi -- --target ${{ matrix.target }} --progress
+          nix run .#test-ffi -- -Dtarget=${{ matrix.target }} -- --progress
 
       - name: TestFFI ReleaseFast for ${{ matrix.target }}
         if: ${{ matrix.can_test }}
         run: |
-          nix run .#test-ffi-release-fast -- --target ${{ matrix.target }} --progress
+          nix run .#test-ffi -- -Dtarget=${{ matrix.target }} -- --progress
 
       - name: Build only for ${{ matrix.target }}
         if: ${{ !matrix.can_test }}
         run: |
           # Build only
           nix run .#build -- -Dtarget=${{ matrix.target }}
-
