upgrade: ffi/rust/crypto and jamduna jamtestnet

--- a/ffi/rust/crypto/Cargo.toml
+++ b/ffi/rust/crypto/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 # bandersnatch_vrfs = { git = "https://github.com/w3f/ring-vrf", version = "0.0.4" }
 
 [dependencies]
-ark-ec-vrfs ={ git = "https://github.com/davxy/ark-ec-vrfs", rev = "ea35e22", features = ["bandersnatch", "ring", "parallel"] }
+ark-serialize = "0.5.0"
+ark-vrf = { git = "https://github.com/davxy/ark-vrf", rev = "bf2d1cf", features = ["bandersnatch", "ring", "parallel"] }
+
 hex = "0.4.3"
 libc = "0.2.167"
 lru = "0.12.4"
