chore: reorg keep w3f-conformance traces and davxy-conformance traces

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,9 @@
 [submodule "src/jamtestvectors/pulls/fisher-yates"]
 	path = src/jamtestvectors/pulls/fisher-yates
 	url = https://github.com/w3f/jamtestvectors/
-[submodule "src/jam-conformance"]
-	path = src/jam-conformance
+[submodule "src/w3f-conformance"]
+	path = src/w3f-conformance
+	url = https://github.com/w3f/jam-conformance.git
+[submodule "src/davxy-conformance"]
+	path = src/davxy-conformance
 	url = https://github.com/davxy/jam-conformance.git
